Fixed form alignment + mobile views

--- a/css/ethical-education-final.webflow.css
+++ b/css/ethical-education-final.webflow.css
@@ -1682,6 +1682,7 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  width: 100%;
   min-width: 0px;
   margin-top: 30px;
   margin-right: 0px;
@@ -1701,8 +1702,14 @@ a {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  text-align: center;
   -o-object-fit: fill;
   object-fit: fill;
+}
+
+.html-embed-2 {
+  width: 100%;
+  text-align: center;
 }
 
 @media screen and (max-width: 991px) {
@@ -2093,10 +2100,6 @@ a {
 }
 
 @media screen and (max-width: 479px) {
-  .freebirdFormviewerViewEmbedded .freebirdFormviewerViewCenteredContent{
-    width: 50%;
-  }
-
   .l-hero-section {
     padding-right: 20px;
     padding-left: 20px;
@@ -2211,13 +2214,12 @@ a {
   }
 
   .html-embed {
-    min-width: 150px;
+    min-width: 50%;
     margin-left: -22px;
   }
-
 }
 
-#w-node-ff5a7c58773b-534a57fd {
+#w-node-_1211a0b7-dc8d-c50c-19da-ff5a7c58773b-534a57fd {
   -ms-grid-row: span 1;
   grid-row-start: span 1;
   -ms-grid-row-span: 1;
@@ -2228,7 +2230,7 @@ a {
   grid-column-end: span 1;
 }
 
-#w-node-ff5a7c587743-534a57fd {
+#w-node-_1211a0b7-dc8d-c50c-19da-ff5a7c587743-534a57fd {
   -ms-grid-row: span 1;
   grid-row-start: span 1;
   -ms-grid-row-span: 1;
@@ -2239,7 +2241,7 @@ a {
   grid-column-end: span 1;
 }
 
-#w-node-ff5a7c58774b-534a57fd {
+#w-node-_1211a0b7-dc8d-c50c-19da-ff5a7c58774b-534a57fd {
   -ms-grid-row: span 1;
   grid-row-start: span 1;
   -ms-grid-row-span: 1;
@@ -2250,7 +2252,7 @@ a {
   grid-column-end: span 1;
 }
 
-#w-node-02401ff2a5c8-534a57fd {
+#w-node-_314be7be-a42b-9701-5857-02401ff2a5c8-534a57fd {
   -ms-grid-row: span 1;
   grid-row-start: span 1;
   -ms-grid-row-span: 1;
@@ -2261,7 +2263,7 @@ a {
   grid-column-end: span 1;
 }
 
-#w-node-02401ff2a5d2-534a57fd {
+#w-node-_314be7be-a42b-9701-5857-02401ff2a5d2-534a57fd {
   -ms-grid-row: span 1;
   grid-row-start: span 1;
   -ms-grid-row-span: 1;
@@ -2272,7 +2274,7 @@ a {
   grid-column-end: span 1;
 }
 
-#w-node-02401ff2a5dc-534a57fd {
+#w-node-_314be7be-a42b-9701-5857-02401ff2a5dc-534a57fd {
   -ms-grid-row: span 1;
   grid-row-start: span 1;
   -ms-grid-row-span: 1;
@@ -2283,7 +2285,7 @@ a {
   grid-column-end: span 1;
 }
 
-#w-node-5acff1afc6c9-534a57fd {
+#w-node-b07956e5-8357-43c0-1b4f-5acff1afc6c9-534a57fd {
   -ms-grid-row: span 1;
   grid-row-start: span 1;
   -ms-grid-row-span: 1;
